Updated module spacing, fixed #43

--- a/base/_paragraphs.scss
+++ b/base/_paragraphs.scss
@@ -22,12 +22,6 @@
 \*----------------------------------------------------------------------------*/
 
     /**
-     * Remove padding of last paragraph
-     */
-    p:last-child{ margin-bottom: 0; }
-
-
-    /**
      * The `.lede` class is used to make the introductory text (usually a paragraph)
      * of a document slightly larger.
      */
