--- a/modules/_media.scss
+++ b/modules/_media.scss
@@ -1,5 +1,6 @@
 /*----------------------------------------------------------------------------*\
     $MEDIA
+    Place any image- and text-like content side-by-side
     As per: stubbornella.org/content/2010/06/25/the-media-object-saves-hundreds-of-lines-of-code
 \*----------------------------------------------------------------------------*/
 
@@ -28,13 +29,15 @@
      */
     @mixin media-collapse (){
         .media__img,
-        .media__img--rev {
+        .media__img--rev,
+        .media__image,
+        .media__image--rev {
+            @include rem(margin, 0 auto $space);
             display: block;
             float: none;
             max-width: 100%;
-            @include rem(margin, 0 auto $space);
 
-            img{
+            img {
                 display: inline-block;
                 margin-bottom: 0;
             }
@@ -51,70 +54,59 @@
 \*----------------------------------------------------------------------------*/
 
     /**
-     * Place any image- and text-like content side-by-side, eg.:
+     * Place any image- and text-like content side-by-side
+     *
+     * Extends `.sign` in `generic/_shared.scss`
+     * Extends `.cf` in `generic/_clearfix.scss`
+     *
+     * Sample usage:
        <div class="media">
-            <div class="media__img">
-                <img/>
-            </div>
-            <div class="media__body"></div>
-        </div>
+           <div class="media__img">
+              <img/>
+           </div>
+           <div class="media__body"></div>
+       </div>
      */
-    .media{
-        display: block;
+    .media {
         @extend .cf;
+        @extend .sign;
+        display: block;
     }
-        .media__img{
-            float: left;
+        /**
+         * Image location left
+         */
+        .media__img,
+        .media__image {
             @include rem(margin-right, $space);
+            float: left;
         }
 
-        /* Reversed image location (right instead of left). */
-        .media__img--rev{
-            float: right;
+        /**
+         * Reversed image location (right instead of left)
+         */
+        .media__img--rev,
+        .media__image--rev {
             @include rem(margin-left, $space);
+            float: right;
+            margin-right: 0;
         }
             .media__img img,
-            .media__img--rev img{
+            .media__img--rev img,
+            .media__image img,
+            .media__image--rev img {
                 display:block;
             }
 
-        .media__body{
+
+        /**
+         * Content body
+         *
+         * Extends `%module` in `generic/_shared.scss`
+         */
+        .media__body {
+            @extend %module;
             overflow: hidden;
         }
-            .media__body,
-            .media__body > :last-child{
-                margin-bottom: 0;
-            }
-
-
-    /**
-     * Islets have a slightly smaller padding value than normal.
-     * With this in mind we make the `.img` spacing a little smaller for
-     * visual consistency.
-     */
-    .islet{
-        .media__img{
-            @include rem(margin-right, $space-half);
-        }
-        .media__img--rev{
-            @include rem(margin-left, $space-half);
-        }
-    }
-
-
-    /**
-     * Continent have a slightly bigger padding value than normal.
-     * With this in mind we make the `.img` spacing a little bigger for
-     * visual consistency.
-     */
-    .continent{
-        .media__img{
-            @include rem(margin-right, $space*2);
-        }
-        .media__img--rev{
-            @include rem(margin-left, $space*2);
-        }
-    }
 
 
     /**
@@ -126,6 +118,44 @@
 
 
 
+    /* Location based modifyers
+    \*------------------------------------------------------------------------*/
+
+        /**
+         * Islets have a slightly smaller padding value than normal.
+         * With this in mind we make the `.media__img` spacing a little smaller for
+         * visual consistency.
+         */
+        .islet {
+            .media__img,
+            .media__image {
+                @include rem(margin-right, $space-half);
+            }
+            .media__img--rev,
+            .media__image--rev {
+                @include rem(margin-left, $space-half);
+            }
+        }
+
+
+        /**
+         * Continent have a slightly bigger padding value than normal.
+         * With this in mind we make the `.media__img` spacing a little bigger for
+         * visual consistency.
+         */
+        .continent {
+            .media__img,
+            .media__image {
+                @include rem(margin-right, $space*2);
+            }
+            .media__img--rev,
+            .media__image--rev {
+                @include rem(margin-left, $space*2);
+            }
+        }
+
+
+
 
 
 /*----------------------------------------------------------------------------*\
@@ -134,7 +164,7 @@
 
     @if $responsive == true {
         /**
-         * Collapse media based on breakpoint
+         * Modifyer: Collapse media based on breakpoint
          */
         @each $state in $breakpoint-has-collapsed-media {
             @include media-query(#{$state}) {
